--- a/forum/WebRoot/index.html
+++ b/forum/WebRoot/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"> 
-<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" /> --> 
-<meta name="apple-mobile-web-app-capable" content="yes" /> 
-<meta name="apple-mobile-web-app-status-bar-style" content="black" />        
-<meta name="format-detection" content="telephone=no" />
 <html>
    <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"> 
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" /> --> 
+	<meta name="apple-mobile-web-app-capable" content="yes" /> 
+	<meta name="apple-mobile-web-app-status-bar-style" content="black" />        
+	<meta name="format-detection" content="telephone=no" />
     <title>风过无痕</title>
 	<script  type="text/javascript"  src="jscss/jquery.js"></script>
     <script  type="text/javascript"  src="jscss/jquery.metadata.js"></script>
@@ -37,7 +37,7 @@
   <body>
   	<center>
   		 <br/>
-    	 <font class="logoLabel"><a  href="theme_query.action" style="text-decoration: none;">风过无痕</a></div></font>
+    	 <font class="logoLabel"><a  href="theme_query.action" style="text-decoration: none;">风过无痕</a></font>
   	</center>
   	
   	<div class="bottom"><a href="index.jsp">电脑版</a>&nbsp;&nbsp;|&nbsp;&nbsp;移动版</div>
